# pkiSvc

./: .gitignore  CMakeLists.txt  README.md
hack/: gen_passwordless_ca.sh
proto/: pki.proto
src/: CMakeLists.txt  cert.cc  cert.h  main.cc  pki.cc  pki.h
src/cli/: client.cc  client.h  main.cc
test/: CMakeLists.txt  cert.cc  main.cc
